[project] :wrench: Make TestFX stfu
Signed-off-by: palexdev <alessandro.parisi406@gmail.com>