@@ -52,6 +52,9 @@ subprojects {
 
     test {
         useJUnitPlatform()
+        jvmArgs += [
+                '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
+        ]
     }
 }
 
